# EDEn

./: .gitignore  ASSETS.txt  CMakeLists.txt  ExodusDraconis.sln  ExodusDraconis.vcproj  ExodusDraconis.vcxproj  GamePrototype.dev  LICENSE.txt  Makefile  README.md  README.txt  log  settings.ini
CMakeModules/: CMakeCopyright.md  FindLibRocket.cmake  FindLibRocketControls.cmake  FindLibRocketDebug.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
Utilities/SpritesheetEditor/: AnimationEditor.rb  FrameFinder.rb  SpritesheetEditor.rb
data/: README.md
data/aspects/: alchemist.eda  gunner.eda  hunter.eda  mystic.eda
data/chapters/: chapter1.lua
data/characters/: akrom.edc  kain.edc  shiara.edc
data/fonts/: Thumbs.db
data/gui/: base.rcss  battleSystemOverlay.rcss  battleSystemOverlay.rml  common.rcss  dataconfirmload.rml  dataconfirmsave.rml  datapane.rcss  datapane.rml  debugConsole.rcss  debugConsole.rml  dialogueBox.rcss  dialogueBox.rml  homepane.rcss  homepane.rml  itempane.rcss  itempane.rml  menu.rcss  menubg.rml  menushell.rml  shortcutBar.rcss  shortcutBar.rml  skillpane.rcss  skillpane.rml  tileEngineOverlay.rcss  tileEngineOverlay.rml  title.rcss  title.rml  titleOptionsMenu.rml
data/images/: Thumbs.db
data/metadata/: items.edb  itemtypes.edb  skills.edb
data/music/: SpiralTower.mid  town.mid
data/regions/: sereia.edr
data/savegames/: savegame1.edd  savegame2.edd  savegamejson.edd  savegametest.edd
data/sprites/: crono.eds  kain.eds  marle.eds  npc1.eds
data/tilesets/: town.edt  town.tsx
doc/: Doxyfile
include/guichan/: key.hpp
lib/: libguichan.def  libguichan_opengl.def  libguichan_sdl.def
src/: DebugConsoleWindow.cpp  DebugConsoleWindow.h  DebugUtils.cpp  DebugUtils.h  Exception.cpp  Exception.h  ExecutionStack.cpp  ExecutionStack.h  GLInclude.h  GameContext.cpp  GameContext.h  GameState.cpp  GameState.h  GameStateType.h  GraphicsUtil.cpp  GraphicsUtil.h  Grid.h  LinkedListNode.h  MovementDirection.h  Point2D.cpp  Point2D.h  Rectangle.cpp  Rectangle.h  Scheduler.cpp  Scheduler.h  Singleton.h  TODOLIST.h  Thread.cpp  Thread.h  guichan.hpp  main.cpp
src/Audio/: Music.cpp  Music.h  Sound.cpp  Sound.h
src/BattleSystem/: BattleController.cpp  BattleController.h  BattleOverlay.cpp  BattleOverlay.h  CombatActor.cpp  CombatActor.h  LuaBattleController.cpp  LuaBattleController.h  LuaCombatActor.cpp  LuaCombatActor.h
src/Controls/: DebugConsoleWindow.h
src/Coroutines/: Coroutine.cpp  Coroutine.h  CoroutineResults.h  Scheduler.cpp  Scheduler.h  Task.cpp  Task.h  TaskId.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h
src/GameData/: Item.cpp  Item.h  ItemData.cpp  ItemData.h  ItemList.h
src/Geometry/: Direction.cpp  Direction.h  Point2D.cpp  Point2D.h  Rectangle.cpp  Rectangle.h  Size.cpp  Size.h
src/Graphics/: GraphicsUtil.cpp  GraphicsUtil.h  OpenGLExtensions.cpp  OpenGLExtensions.h  ScreenTexture.cpp  ScreenTexture.h  Texture.cpp  Texture.h
src/LuaWrapper/: LuaWrapper.hpp
src/MainMenu/: MainMenu.cpp  MainMenu.h  MainMenuActions.cpp  TitleScreenSettingsMenu.cpp  TitleScreenSettingsMenu.h
src/Menu/: CharacterDependentMenu.cpp  CharacterDependentMenu.h  CharacterModule.cpp  CharacterModule.h  CharacterPane.cpp  CharacterPane.h  CharacterSelectListener.h  ConfirmState.cpp  ConfirmState.h  ConfirmStateListener.h  DataMenu.cpp  DataMenu.h  DataPane.cpp  DataPane.h  DataViewModel.cpp  DataViewModel.h  EquipMenu.cpp  EquipMenu.h  EquipPane.cpp  EquipPane.h  HomeMenu.cpp  HomeMenu.h  HomePane.cpp  HomePane.h  HomeViewModel.cpp  HomeViewModel.h  ImageFormatter.cpp  ImageFormatter.h  ItemMenu.cpp  ItemMenu.h  ItemViewModel.cpp  ItemViewModel.h  ItemsMenu.cpp  ItemsMenu.h  ItemsPane.cpp  ItemsPane.h  Menu.cpp  Menu.h  MenuPane.cpp  MenuPane.h  (+15 more)
src/MenuControls/: ItemListModel.cpp  ItemListModel.h  MenuAction.h  MenuShell.cpp  MenuShell.h  SaveGameModule.cpp  SaveGameModule.h  SaveGameSelectListener.h
src/Messaging/: Listener.h  MessagePipe.cpp  MessagePipe.h
src/Metadata/: Item.h  ItemData.h  ItemList.h  Metadata.cpp  Metadata.h  Skill.cpp  Skill.h  SkillList.h  Usable.cpp  Usable.h  UsableId.h
src/PlayerData/: Aspect.cpp  Aspect.h  Character.cpp  Character.h  CharacterRoster.cpp  CharacterRoster.h  EquipData.cpp  EquipData.h  EquipSlot.cpp  EquipSlot.h  Inventory.cpp  Inventory.h  LuaCharacter.cpp  LuaCharacter.h  LuaCharacterRoster.cpp  LuaCharacterRoster.h  LuaInventory.cpp  LuaInventory.h  LuaQuest.cpp  LuaQuest.h  PlayerData.cpp  PlayerData.h  PlayerDataSummary.cpp  PlayerDataSummary.h  Quest.cpp  Quest.h  SaveGameItemNames.h  Shortcut.cpp  Shortcut.h
src/ResourceLoader/: AudioResource.cpp  AudioResource.h  Music.cpp  Music.h  Resource.cpp  Resource.h  ResourceException.h  ResourceKey.h  ResourceLoader.cpp  ResourceLoader.h  Sound.cpp  Sound.h
src/ScriptEngine/: CharacterDataScript.cpp  CharacterDataScript.h  EdenApiMacros.h  FileScript.cpp  FileScript.h  ItemScript.cpp  ItemScript.h  MapTriggerCallback.cpp  MapTriggerCallback.h  NPCScript.cpp  NPCScript.h  Script.cpp  Script.h  ScriptEngine.cpp  ScriptEngine.h  ScriptException.h  ScriptFactory.cpp  ScriptFactory.h  ScriptFunctions.cpp  ScriptScheduler.cpp  ScriptScheduler.h  ScriptUtilities.cpp  ScriptUtilities.h  StringScript.cpp  StringScript.h  Task.cpp  Task.h  TaskId.h  TicketId.h  UsableScript.cpp  UsableScript.h
src/Settings/: Settings.cpp  Settings.h  SettingsResolution.cpp
src/Shapes/: Point2D.cpp  Point2D.h  Rectangle.cpp  Rectangle.h  Size.cpp  Size.h
src/Sprites/: Animation.cpp  Animation.h  Frame.cpp  Frame.h  FrameSequence.h  Sprite.cpp  Sprite.h  SpriteFrame.cpp  SpriteFrame.h  Spritesheet.cpp  Spritesheet.h
src/TileEngine/: Actor.cpp  Actor.h  Actor_MoveOrder.cpp  Actor_Orders.h  Actor_StandOrder.cpp  Camera.cpp  Camera.h  CameraSlider.cpp  CameraSlider.h  DialogueController.cpp  DialogueController.h  EntityGrid.cpp  EntityGrid.h  GridActor.cpp  GridActor.h  GridActor_MoveOrder.cpp  GridActor_Orders.h  GridActor_StandOrder.cpp  Layer.cpp  Layer.h  LuaActor.cpp  LuaActor.h  LuaGridActor.cpp  LuaGridActor.h  LuaNPC.cpp  LuaNPC.h  Map.cpp  Map.h  (+40 more)
(+160 files in other folders)
